# dependency-analysis-pypi

./: .gitmodules  Dockerfile  README.md  dgraph-notebook.ipynb  dgraph-notebook.py.ipynb  docker-compose.yml  load-data-to-draph.py  load-data-to-draph.py.ipynb  pyproject.toml
code/app/dependency_graph_builder/: .gitignore  Pipfile  dep_scanner.py  poetry_dep_solver_demo.py  start_worker_n.sh
code/app/dependency_graph_builder/lib/: RepoProxy.py  Utils.py
code/app/dependency_graph_builder/lib/DependencyScanner/: DependencyScanner.py
code/app/dependency_graph_builder/lib/DependencySolver/PipDependencySolver/: ConstraintResolver.py  DependencyResolver.py  __init__.py
code/app/dependency_graph_builder/lib/DependencySolver/PoetryDependencySolver/: PoetryDependencySolver.py
code/app/dependency_graph_builder/script/apply_linter/: ThreadPool.py  apply_linter.py  pkg_to_analysis.json  shell_cmd_warpper.py
code/app/dependency_graph_builder/script/failure_analysis/: rerun_failed_pkg.py
code/app/dependency_graph_builder/script/task_ctrl/1_do_dep_resolution_parallel/: idx_calculator_for_fail_recover.py  merge_result_from_different_worker.py  readme  start_worker_n.sh
code/app/dependency_graph_builder/test/: TestProxyRepo.py
code/app/dependency_graph_builder/utils/: fail_stats.py
code/poc/import_scan/: import_scan.py
proposals/: 1-dependency-network.md  2-meta-reproducibility-analysis.md  3-a-reproduciblity-study.md  Project Idea.md  other.md  proposals.md
(+2 files in other folders)
