[tool.poetry]
name = "dependency-graph"
version = "0.1.0"
description = ""
authors = ["B Zhang <bihan.zh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydgraph = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
